# epope-de-Godfrey-Demetrius

./: .gitignore  CMakeLists.txt  vcpkg.json
epope-de-Godfrey-Demetrius/: Entity.ixx  Player.ixx  epope-de-Godfrey-Demetrius.vcxproj  epope-de-Godfrey-Demetrius.vcxproj.filters
epope-de-Godfrey-Demetrius/Include/managers/: WindowManager.h
epope-de-Godfrey-Demetrius/Module/: DrawableSprite.ixx
epope-de-Godfrey-Demetrius/managers/: IEvent.ixx
epope-de-Godfrey-Demetrius/src/: GameEngine.cpp
epope-de-Godfrey-Demetrius/x64/Debug/: Drawable.hpp_2AA84919B28B9EFE.ifc.dt.command  Drawable.hpp_2AA84919B28B9EFE.ifc.dt.d.json  Drawable.hpp_2AA84919B28B9EFE.ifc.dt.module.json  Drawable.hpp_2AA84919B28B9EFE.ifc.dt.module.json.command  Drawable.hpp_2AA84919B28B9EFE.ifc.isense.dt.command  DrawableSprite.ixx.ifc  DrawableSprite.ixx.ifc.d.json  DrawableSprite.ixx.ifc.dt  DrawableSprite.ixx.ifc.dt.command  DrawableSprite.ixx.ifc.dt.d.json  DrawableSprite.ixx.ifc.dt.module.json  DrawableSprite.ixx.ifc.dt.module.json.command  DrawableSprite.ixx.ifc.isense.dt  DrawableSprite.ixx.ifc.isense.dt.command  DrawableSprite.ixx.ifc.isense.dt.d.json  DrawableSprite.ixx.obj.dt.d.json  DrawableSprite.ixx.obj.dt.module.json  DrawableSprite.ixx.obj.dt.module.json.command  Entity.ixx.ifc  (+65 more)
src/: Button.cpp  DrawableSprite.cpp  Entity.cpp  GameEngine.cpp  ImgButton.cpp  InitGame.cpp  Menu.cpp  Mobs.cpp  Player.cpp  Rectangle.cpp  Rectangle.h  Sprite.cpp  WindowManager.cpp  main.cpp
src/headers/: Button.h  Entity.h  GameEngine.h  IEvent.h  ImgButton.h  Menu.h  Mobs.h  Player.h  Rectangle.h  Sprite.h  WindowManager.h
(+14 files in other folders)
